2007-09-08  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.h
	  src/nm-device-802-11-mesh-olpc.c
	  src/nm-dbus-device.c
		- (nm_dbus_device_get_mesh_step, nm_device_802_11_mesh_olpc_get_mesh_step):
			new functions; expose current mesh step over D-Bus

	* src/nm-device-802-11-mesh-olpc.c
		- (device_activation_started_cb, connect_to_device_signals, real_init,
		   real_notify_device_removed): Fix case where, when another device
			(like wired) pre-empts the mesh device, then loses the link sometime
			later, makes the mesh device pick up where it left off, not at the
			start of it's activation process like it should

2007-09-08  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.h
	  src/nm-device-802-11-mesh-olpc.c
		- More granular mesh device control.  Mesh devices may be activated
			with a specific channel and  mesh step, and will be locked to that
			channel for the duration of the activation.  The default is still
			the same (4-step activation process on all 3 channels).
	  
	* src/nm-activation-request.h
	  src/nm-activation-request.c
		- (nm_act_request_set_mesh_channel, nm_act_request_get_mesh_channel,
		   nm_act_request_set_mesh_start, nm_act_request_get_mesh_start):
			new functions to support more granular mesh device control

	* src/nm-dbus-nm.c
		- (nm_dbus_nm_set_active_device): accept mesh channel and mesh step
			start parameters for mesh device activation

2007-08-30  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.h
	  src/nm-device-802-11-mesh-olpc.c
		- (nm_device_802_11_mesh_olpc_get_frequency): new function

	* src/nm-dbus-device.c
		- (nm_dbus_device_get_frequency): new function

2007-08-10  Dan Williams  <dcbw@redhat.com>

	* src/named-manager/nm-named-manager.c
		- (rewrite_resolv_conf): clean up error handling to avoid double-free by
		    not calling fclose() twice on some error conditions

2007-08-08  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-wireless.[ch]